name:                hsrprob
version:             0.1.0.0
synopsis:            Draw some probabilities
description:         Draw some probabilities
homepage:            https://github.com/taruti/hsrprob#readme
license:             BSD3
license-file:        LICENSE
author:              Taru Karttunen
maintainer:          taruti@taruti.net
copyright:           2016 Taru Karttunen
category:            Misc
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hsrprob
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hsrprob-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hsrprob
  default-language:    Haskell2010

test-suite hsrprob-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hsrprob
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hsrprob
